--- a/shit-list-service/build.gradle
+++ b/shit-list-service/build.gradle
@@ -9,15 +9,17 @@ repositories {
 }
 
 dependencies {
-    compile project(':shit-list-ui')
+//    compile project(':shit-list-ui')
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
     implementation 'com.github.ben-manes.caffeine:caffeine'
     implementation group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.10.0.202012080955-r'
     implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 
     runtimeOnly 'com.h2database:h2'
 
