--- a/shit-list-ui/package.json
+++ b/shit-list-ui/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "scripts": {
     "build": "ng build --prod",
-    "clean": "npx sort-package-json && npx prettier --write . && npx stylelint **/*.scss --fix",
     "lint": "ng lint",
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.config.json",
@@ -21,6 +20,8 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "@stomp/ng2-stompjs": "^8.0.0",
+    "@stomp/stompjs": "^6.0.0",
     "bulma": "^0.9.2",
     "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.6.6",
@@ -41,7 +42,13 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "prettier": "2.1.2",
     "protractor": "~7.0.0",
+    "sort-package-json": "^1.46.0",
+    "stylelint": "^13.7.2",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.18.0",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.0",
     "typescript": "4.0.7"
