chore: Clean up gradle file

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,9 @@ group=io.shit.list
 version=0.0.1-SNAPSHOT
 sourceCompatibility=15
 targetCompatibility=15
-
 ngArtifact=shit-list-ui
+
+# Pull these from GitHub secrets
+IMAGE=${DOCKER_IMAGE}
+USERNAME=${DOCKER_USERNAME}
+PASSWORD=${DOCKER_PASSWORD}
