--- a/shit-list-service/build.gradle
+++ b/shit-list-service/build.gradle
@@ -9,17 +9,21 @@ repositories {
 }
 
 dependencies {
-//    compile project(':shit-list-ui')
+    compile project(':shit-list-ui')
 
+    // Spring
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
+    // Apache
+    implementation 'commons-io:commons-io:2.8.0'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+
+    // Misc
     implementation 'com.github.ben-manes.caffeine:caffeine'
-    implementation group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.10.0.202012080955-r'
-    implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
+    implementation 'org.eclipse.jgit:org.eclipse.jgit:5.10.0.202012080955-r'
 
     runtimeOnly 'com.h2database:h2'
 
@@ -44,11 +48,14 @@ jib {
         image = 'adoptopenjdk/openjdk15:jdk-15.0.2_7-alpine'
     }
     to {
-        image = 'peavers/shit-list'
+        image = IMAGE
+        auth {
+            username = USERNAME
+            password = PASSWORD
+        }
         tags = ["latest"]
     }
     container {
-        jvmFlags = ['-Dspring.profiles.active=production', '-XX:+UseContainerSupport', '-Dserver.port=8080', '-Dfile.encoding=UTF-8']
         ports = ['8080']
     }
 }
